@@ -12,6 +12,8 @@
 
 ngIRCd CVSHEAD
 
+  - Made ngIRCd compile on HP/UX 10.20 with native HP pre-ANSI C compiler and
+    most probably other older C compilers on other systems.
   - Fixed wrong variable names in output of "ngircd --configtest".
   - Debian: Fxied the name of the "default file" in the init script for
     ngircd-full packages. And do the test if the binary is executable after
@@ -543,4 +545,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.242 2004/09/24 18:00:40 alex Exp $
+$Id: ChangeLog,v 1.243 2004/10/20 13:47:32 alex Exp $
